# ml-iris-inference-fastapi

./: .gitignore  Dockerfile  README.md  makefile  model_training.py  pyproject.toml  requirements.txt  run.py  test_endpoints.sh  try_api.sh
.github/workflows/: ci.yml
app/: main.py  models.py  router.py  service.py
tests/: test_api.py  test_service.py
